--- a/HCharacterAdjustmentX.KKS/HCharacterAdjustmentX.KKS.csproj
+++ b/HCharacterAdjustmentX.KKS/HCharacterAdjustmentX.KKS.csproj
@@ -19,11 +19,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="BepInEx.ConfigurationManager" Version="16.4.0">
+    <PackageReference Include="BepInEx.ConfigurationManager" Version="18.3.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="IllusionLibs.BepInEx" Version="5.4.15" />
+    <PackageReference Include="ExtensibleSaveFormat.KoikatsuSunshine" Version="19.7.0" />
+    <PackageReference Include="IllusionLibs.BepInEx" Version="5.4.22" />
     <PackageReference Include="IllusionLibs.KoikatsuSunshine.Assembly-CSharp" Version="2021.9.17" />
     <PackageReference Include="IllusionLibs.KoikatsuSunshine.Assembly-CSharp-firstpass" Version="2021.9.17" />
     <PackageReference Include="IllusionLibs.KoikatsuSunshine.UnityEngine.AudioModule" Version="2019.4.9" />
@@ -32,8 +33,8 @@
     <PackageReference Include="IllusionLibs.KoikatsuSunshine.UnityEngine.IMGUIModule" Version="2019.4.9" />
     <PackageReference Include="IllusionLibs.KoikatsuSunshine.UnityEngine.UI" Version="2019.4.9" />
     <PackageReference Include="IllusionLibs.KoikatsuSunshine.UnityEngine.UIModule" Version="2019.4.9" />
-    <PackageReference Include="IllusionModdingAPI.KKSAPI" Version="1.31.2" />
-    <PackageReference Include="Microsoft.Unity.Analyzers" Version="1.12.0">
+    <PackageReference Include="IllusionModdingAPI.KKSAPI" Version="1.41.0" />
+    <PackageReference Include="Microsoft.Unity.Analyzers" Version="1.19.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
